intel/bench_214/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main/log.txt
bench_214/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main.c:82:38: error: assigning to 'int' from incompatible type 'void *'
      RCC_Clocks->SYSCLK_Frequency = HSI48_VALUE;
                                     ^~~~~~~~~~~
bench_214/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main.c:133:36: error: assigning to 'int' from incompatible type 'void *'
    RCC_Clocks->CECCLK_Frequency = LSE_VALUE;
                                   ^~~~~~~~~
bench_214/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main.c:162:39: error: assigning to 'int' from incompatible type 'void *'
    RCC_Clocks->USART1CLK_Frequency = LSE_VALUE;
                                      ^~~~~~~~~
bench_214/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main.c:184:39: error: assigning to 'int' from incompatible type 'void *'
    RCC_Clocks->USART2CLK_Frequency = LSE_VALUE;
                                      ^~~~~~~~~
bench_214/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main.c:196:36: error: assigning to 'int' from incompatible type 'void *'
    RCC_Clocks->USBCLK_Frequency = HSI48_VALUE;
                                   ^~~~~~~~~~~
5 errors generated.
HLS FPGA Parse FAILED.
